[package]
name = "postgres-ecdsa-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Postgres
tokio-postgres = "0.7"
bb8 = "0.9"
bb8-postgres = "0.9"

# ECDSA / Ethereum
alloy-primitives = { version = "0.8", features = ["k256"] }

# Utilities
bytes = "1.9"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

